import "client.comm.proto";

package client;

message open_info {
    required uint32 id = 1;
}

message open_msg {
    enum type {
        now = 1; // 当前开启列表
        add = 2; // 新可开列表
    }

    required type      t  = 1;
    repeated open_info id = 2;
}

message open_func_req {
	required uint32 role_id = 1;
	repeated open_info id = 2;
}
