
package mysql;

message t_newtask{
    required uint32 id = 1;
    required string sid = 2;
    required string did = 3;
    required string accountName = 4;
    required string playerName = 5;
    required uint32 taskId = 6;
    required uint32 status = 7;
    required uint32 quality = 8;
    required uint32 createDate = 9;
}
