package server;

message operate_task {
    required uint32 sid         = 1;
    required uint32 role_id     = 2;
    required uint32 task_id     = 3;
    required uint32 status      = 4;
    required uint32 quality     = 5;
    required uint32 create_date = 6;
}

message operate_money {
    required uint32 sid         = 1;
    required uint32 role_id     = 2;
    required uint32 root_id     = 3;
    required uint32 type_id     = 4;
    required uint32 old_value   = 5;
    required uint32 new_value   = 6;
    required uint32 goods_id    = 7;
    required uint32 num         = 8;
    required uint32 create_date = 9;
}

message operate_log {
    optional operate_task  ot = 1;
    optional operate_money om = 2;
}